--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,13 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --scrollbar-thumb-bg: #a1a1aa;
+  --scrollbar-track-bg: #e4e4e7;
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--scrollbar-thumb-bg) var(--scrollbar-track-bg);
 }
 
 @layer utilities {
